--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -45,9 +45,9 @@
     </string-array>
 
     <!-- Control whether a car dock event should override the default bluetooth
-         audio routing, FORCE_BT_CAR_DOCK, with an analog dock, FORCE_ANALOG_DOCK. -->
+         audio routing, FORCE_BT_CAR_DOCK, with an analog dock, FORCE_ANALOG_DOCK. >
     <bool name="config_forceAnalogCarDock">true</bool>
-    <bool name="config_forceAnalogDeskDock">true</bool>
+    <bool name="config_forceAnalogDeskDock">true</bool-->
 
     <!-- Ultrasound support for Mic/speaker path -->
     <!-- Whether the default microphone audio source supports near-ultrasound frequencies
@@ -61,7 +61,7 @@
     <bool name="config_enableAutoPowerModes">true</bool>
 
     <!-- Support in Surfaceflinger for blur layers.
-         NOTE: This requires additional hardware-specific code. -->
-    <bool name="config_ui_blur_enabled">true</bool>
+         NOTE: This requires additional hardware-specific code. >
+    <bool name="config_ui_blur_enabled">true</bool-->
 
 </resources>
